tests/ui/closures/issue-99565.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-99565.rs:6:5
   |
LL |     foo(|| {});
   |     ^^^ cannot infer type of the type parameter `T` declared on the function `foo`
   |
help: consider specifying the generic arguments
   |
LL |     foo::<T, _>(|| {});
   |        ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
